antlr4_generated_src/StaticScriptParser/StaticScriptParser.cpp

// Generated from /Users/chan/Desktop/StaticScript-master-2/grammar/StaticScriptParser.g4 by ANTLR 4.9.2


#include "StaticScriptParserVisitor.h"

#include "StaticScriptParser.h"


using namespace antlrcpp;
using namespace antlr4;

StaticScriptParser::StaticScriptParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

StaticScriptParser::~StaticScriptParser() {
  delete _interpreter;
}

std::string StaticScriptParser::getGrammarFileName() const {
  return "StaticScriptParser.g4";
}

const std::vector<std::string>& StaticScriptParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& StaticScriptParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ModuleContext ------------------------------------------------------------------

StaticScriptParser::ModuleContext::ModuleContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* StaticScriptParser::ModuleContext::EOF() {
  return getToken(StaticScriptParser::EOF, 0);
}

StaticScriptParser::StatementsContext* StaticScriptParser::ModuleContext::statements() {
  return getRuleContext<StaticScriptParser::StatementsContext>(0);
}


size_t StaticScriptParser::ModuleContext::getRuleIndex() const {
  return StaticScriptParser::RuleModule;
}


antlrcpp::Any StaticScriptParser::ModuleContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StaticScriptParserVisitor*>(visitor))
    return parserVisitor->visitModule(this);
  else
    return visitor->visitChildren(this);
}

StaticScriptParser::ModuleContext* StaticScriptParser::module() {
  ModuleContext *_localctx = _tracker.createInstance<ModuleContext>(_ctx, getState());
  enterRule(_localctx, 0, StaticScriptParser::RuleModule);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(73);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << StaticScriptParser::Let)
      | (1ULL << StaticScriptParser::Const)
      | (1ULL << StaticScriptParser::If)
      | (1ULL << StaticScriptParser::For)
      | (1ULL << StaticScriptParser::While)
      | (1ULL << StaticScriptParser::Break)
      | (1ULL << StaticScriptParser::Continue)
      | (1ULL << StaticScriptParser::Function)
      | (1ULL << StaticScriptParser::Return)
      | (1ULL << StaticScriptParser::OpenParen)
      | (1ULL << StaticScriptParser::OpenBracket)
      | (1ULL << StaticScriptParser::OpenBrace)
      | (1ULL << StaticScriptParser::SemiColon)
      | (1ULL << StaticScriptParser::PlusPlus)
      | (1ULL << StaticScriptParser::MinusMinus)
      | (1ULL << StaticScriptParser::Not)
      | (1ULL << StaticScriptParser::BitNot)
      | (1ULL << StaticScriptParser::Plus)
      | (1ULL << StaticScriptParser::Minus))) != 0) || ((((_la - 64) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 64)) & ((1ULL << (StaticScriptParser::BooleanLiteral - 64))
      | (1ULL << (StaticScriptParser::DecimalIntegerLiteral - 64))
      | (1ULL << (StaticScriptParser::HexIntegerLiteral - 64))
      | (1ULL << (StaticScriptParser::OctalIntegerLiteral - 64))
      | (1ULL << (StaticScriptParser::BinaryIntegerLiteral - 64))
      | (1ULL << (StaticScriptParser::FloatLiteral - 64))
      | (1ULL << (StaticScriptParser::StringLiteral - 64))
      | (1ULL << (StaticScriptParser::Identifier - 64)))) != 0)) {
      setState(72);
      statements();
    }
    setState(75);
    match(StaticScriptParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementsContext ------------------------------------------------------------------

StaticScriptParser::StatementsContext::StatementsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<StaticScriptParser::StatementContext *> StaticScriptParser::StatementsContext::statement() {
  return getRuleContexts<StaticScriptParser::StatementContext>();
}

StaticScriptParser::StatementContext* StaticScriptParser::StatementsContext::statement(size_t i) {
  return getRuleContext<StaticScriptParser::StatementContext>(i);
}


size_t StaticScriptParser::StatementsContext::getRuleIndex() const {
  return StaticScriptParser::RuleStatements;
}


antlrcpp::Any StaticScriptParser::StatementsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StaticScriptParserVisitor*>(visitor))
    return parserVisitor->visitStatements(this);
  else
    return visitor->visitChildren(this);
}

StaticScriptParser::StatementsContext* StaticScriptParser::statements() {
  StatementsContext *_localctx = _tracker.createInstance<StatementsContext>(_ctx, getState());
  enterRule(_localctx, 2, StaticScriptParser::RuleStatements);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(78); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(77);
      statement();
      setState(80); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << StaticScriptParser::Let)
      | (1ULL << StaticScriptParser::Const)
      | (1ULL << StaticScriptParser::If)
      | (1ULL << StaticScriptParser::For)
      | (1ULL << StaticScriptParser::While)
      | (1ULL << StaticScriptParser::Break)
      | (1ULL << StaticScriptParser::Continue)
      | (1ULL << StaticScriptParser::Function)
      | (1ULL << StaticScriptParser::Return)
      | (1ULL << StaticScriptParser::OpenParen)
      | (1ULL << StaticScriptParser::OpenBracket)
      | (1ULL << StaticScriptParser::OpenBrace)
      | (1ULL << StaticScriptParser::SemiColon)
      | (1ULL << StaticScriptParser::PlusPlus)
      | (1ULL << StaticScriptParser::MinusMinus)
      | (1ULL << StaticScriptParser::Not)
      | (1ULL << StaticScriptParser::BitNot)
      | (1ULL << StaticScriptParser::Plus)
      | (1ULL << StaticScriptParser::Minus))) != 0) || ((((_la - 64) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 64)) & ((1ULL << (StaticScriptParser::BooleanLiteral - 64))
      | (1ULL << (StaticScriptParser::DecimalIntegerLiteral - 64))
      | (1ULL << (StaticScriptParser::HexIntegerLiteral - 64))
      | (1ULL << (StaticScriptParser::OctalIntegerLiteral - 64))
      | (1ULL << (StaticScriptParser::BinaryIntegerLiteral - 64))
      | (1ULL << (StaticScriptParser::FloatLiteral - 64))
      | (1ULL << (StaticScriptParser::StringLiteral - 64))
      | (1ULL << (StaticScriptParser::Identifier - 64)))) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

StaticScriptParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

StaticScriptParser::EmptyStatementContext* StaticScriptParser::StatementContext::emptyStatement() {
  return getRuleContext<StaticScriptParser::EmptyStatementContext>(0);
}

StaticScriptParser::DeclarationStatementContext* StaticScriptParser::StatementContext::declarationStatement() {
  return getRuleContext<StaticScriptParser::DeclarationStatementContext>(0);
}

StaticScriptParser::CompoundStatementContext* StaticScriptParser::StatementContext::compoundStatement() {
  return getRuleContext<StaticScriptParser::CompoundStatementContext>(0);
}

StaticScriptParser::ExpressionStatementContext* StaticScriptParser::StatementContext::expressionStatement() {
  return getRuleContext<StaticScriptParser::ExpressionStatementContext>(0);
}

StaticScriptParser::SelectionStatementContext* StaticScriptParser::StatementContext::selectionStatement() {
  return getRuleContext<StaticScriptParser::SelectionStatementContext>(0);
}

StaticScriptParser::IterationStatementContext* StaticScriptParser::StatementContext::iterationStatement() {
  return getRuleContext<StaticScriptParser::IterationStatementContext>(0);
}

StaticScriptParser::JumpStatementContext* StaticScriptParser::StatementContext::jumpStatement() {
  return getRuleContext<StaticScriptParser::JumpStatementContext>(0);
}


size_t StaticScriptParser::StatementContext::getRuleIndex() const {
  return StaticScriptParser::RuleStatement;
}


antlrcpp::Any StaticScriptParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StaticScriptParserVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

StaticScriptParser::StatementContext* StaticScriptParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 4, StaticScriptParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(89);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case StaticScriptParser::SemiColon: {
        enterOuterAlt(_localctx, 1);
        setState(82);
        emptyStatement();
        break;
      }

      case StaticScriptParser::Let:
      case StaticScriptParser::Const:
      case StaticScriptParser::Function: {
        enterOuterAlt(_localctx, 2);
        setState(83);
        declarationStatement();
        break;
      }

      case StaticScriptParser::OpenBrace: {
        enterOuterAlt(_localctx, 3);
        setState(84);
        compoundStatement();
        break;
      }

      case StaticScriptParser::OpenParen:
      case StaticScriptParser::OpenBracket:
      case StaticScriptParser::PlusPlus:
      case StaticScriptParser::MinusMinus:
      case StaticScriptParser::Not:
      case StaticScriptParser::BitNot:
      case StaticScriptParser::Plus:
      case StaticScriptParser::Minus:
      case StaticScriptParser::BooleanLiteral:
      case StaticScriptParser::DecimalIntegerLiteral:
      case StaticScriptParser::HexIntegerLiteral:
      case StaticScriptParser::OctalIntegerLiteral:
      case StaticScriptParser::BinaryIntegerLiteral:
      case StaticScriptParser::FloatLiteral:
      case StaticScriptParser::StringLiteral:
      case StaticScriptParser::Identifier: {
        enterOuterAlt(_localctx, 4);
        setState(85);
        expressionStatement();
        break;
      }

      case StaticScriptParser::If: {
        enterOuterAlt(_localctx, 5);
        setState(86);
        selectionStatement();
        break;
      }

      case StaticScriptParser::For:
      case StaticScriptParser::While: {
        enterOuterAlt(_localctx, 6);
        setState(87);
        iterationStatement();
        break;
      }

      case StaticScriptParser::Break:
      case StaticScriptParser::Continue:
      case StaticScriptParser::Return: {
        enterOuterAlt(_localctx, 7);
        setState(88);
        jumpStatement();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- EmptyStatementContext ------------------------------------------------------------------

StaticScriptParser::EmptyStatementContext::EmptyStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* StaticScriptParser::EmptyStatementContext::SemiColon() {
  return getToken(StaticScriptParser::SemiColon, 0);
}


size_t StaticScriptParser::EmptyStatementContext::getRuleIndex() const {
  return StaticScriptParser::RuleEmptyStatement;
}


antlrcpp::Any StaticScriptParser::EmptyStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StaticScriptParserVisitor*>(visitor))
    return parserVisitor->visitEmptyStatement(this);
  else
    return visitor->visitChildren(this);
}

StaticScriptParser::EmptyStatementContext* StaticScriptParser::emptyStatement() {
  EmptyStatementContext *_localctx = _tracker.createInstance<EmptyStatementContext>(_ctx, getState());
  enterRule(_localctx, 6, StaticScriptParser::RuleEmptyStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(91);
    match(StaticScriptParser::SemiColon);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationStatementContext ------------------------------------------------------------------

StaticScriptParser::DeclarationStatementContext::DeclarationStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

StaticScriptParser::DeclarationContext* StaticScriptParser::DeclarationStatementContext::declaration() {
  return getRuleContext<StaticScriptParser::DeclarationContext>(0);
}


size_t StaticScriptParser::DeclarationStatementContext::getRuleIndex() const {
  return StaticScriptParser::RuleDeclarationStatement;
}


antlrcpp::Any StaticScriptParser::DeclarationStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StaticScriptParserVisitor*>(visitor))
    return parserVisitor->visitDeclarationStatement(this);
  else
    return visitor->visitChildren(this);
}

StaticScriptParser::DeclarationStatementContext* StaticScriptParser::declarationStatement() {
  DeclarationStatementContext *_localctx = _tracker.createInstance<DeclarationStatementContext>(_ctx, getState());
  enterRule(_localctx, 8, StaticScriptParser::RuleDeclarationStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(93);
    declaration();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationContext ------------------------------------------------------------------

StaticScriptParser::DeclarationContext::DeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

StaticScriptParser::VariableDeclarationContext* StaticScriptParser::DeclarationContext::variableDeclaration() {
  return getRuleContext<StaticScriptParser::VariableDeclarationContext>(0);
}

StaticScriptParser::FunctionDeclarationContext* StaticScriptParser::DeclarationContext::functionDeclaration() {
  return getRuleContext<StaticScriptParser::FunctionDeclarationContext>(0);
}


size_t StaticScriptParser::DeclarationContext::getRuleIndex() const {
  return StaticScriptParser::RuleDeclaration;
}


antlrcpp::Any StaticScriptParser::DeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StaticScriptParserVisitor*>(visitor))
    return parserVisitor->visitDeclaration(this);
  else
    return visitor->visitChildren(this);
}

StaticScriptParser::DeclarationContext* StaticScriptParser::declaration() {
  DeclarationContext *_localctx = _tracker.createInstance<DeclarationContext>(_ctx, getState());
  enterRule(_localctx, 10, StaticScriptParser::RuleDeclaration);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(97);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case StaticScriptParser::Let:
      case StaticScriptParser::Const: {
        enterOuterAlt(_localctx, 1);
        setState(95);
        variableDeclaration();
        break;
      }

      case StaticScriptParser::Function: {
        enterOuterAlt(_localctx, 2);
        setState(96);
        functionDeclaration();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VariableDeclarationContext ------------------------------------------------------------------

StaticScriptParser::VariableDeclarationContext::VariableDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

StaticScriptParser::VariableDeclaratorsContext* StaticScriptParser::VariableDeclarationContext::variableDeclarators() {
  return getRuleContext<StaticScriptParser::VariableDeclaratorsContext>(0);
}

tree::TerminalNode* StaticScriptParser::VariableDeclarationContext::SemiColon() {
  return getToken(StaticScriptParser::SemiColon, 0);
}


size_t StaticScriptParser::VariableDeclarationContext::getRuleIndex() const {
  return StaticScriptParser::RuleVariableDeclaration;
}


antlrcpp::Any StaticScriptParser::VariableDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StaticScriptParserVisitor*>(visitor))
    return parserVisitor->visitVariableDeclaration(this);
  else
    return visitor->visitChildren(this);
}

StaticScriptParser::VariableDeclarationContext* StaticScriptParser::variableDeclaration() {
  VariableDeclarationContext *_localctx = _tracker.createInstance<VariableDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 12, StaticScriptParser::RuleVariableDeclaration);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(99);
    variableDeclarators();
    setState(100);
    match(StaticScriptParser::SemiColon);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VariableDeclaratorsContext ------------------------------------------------------------------

StaticScriptParser::VariableDeclaratorsContext::VariableDeclaratorsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

StaticScriptParser::VariableModifierContext* StaticScriptParser::VariableDeclaratorsContext::variableModifier() {
  return getRuleContext<StaticScriptParser::VariableModifierContext>(0);
}

std::vector<StaticScriptParser::VariableDeclaratorContext *> StaticScriptParser::VariableDeclaratorsContext::variableDeclarator() {
  return getRuleContexts<StaticScriptParser::VariableDeclaratorContext>();
}

StaticScriptParser::VariableDeclaratorContext* StaticScriptParser::VariableDeclaratorsContext::variableDeclarator(size_t i) {
  return getRuleContext<StaticScriptParser::VariableDeclaratorContext>(i);
}

std::vector<tree::TerminalNode *> StaticScriptParser::VariableDeclaratorsContext::Comma() {
  return getTokens(StaticScriptParser::Comma);
}

tree::TerminalNode* StaticScriptParser::VariableDeclaratorsContext::Comma(size_t i) {
  return getToken(StaticScriptParser::Comma, i);
}


size_t StaticScriptParser::VariableDeclaratorsContext::getRuleIndex() const {
  return StaticScriptParser::RuleVariableDeclarators;
}


antlrcpp::Any StaticScriptParser::VariableDeclaratorsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StaticScriptParserVisitor*>(visitor))
    return parserVisitor->visitVariableDeclarators(this);
  else
    return visitor->visitChildren(this);
}

StaticScriptParser::VariableDeclaratorsContext* StaticScriptParser::variableDeclarators() {
  VariableDeclaratorsContext *_localctx = _tracker.createInstance<VariableDeclaratorsContext>(_ctx, getState());
  enterRule(_localctx, 14, StaticScriptParser::RuleVariableDeclarators);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(102);
    variableModifier();
    setState(103);
    variableDeclarator();
    setState(108);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == StaticScriptParser::Comma) {
      setState(104);
      match(StaticScriptParser::Comma);
      setState(105);
      variableDeclarator();
      setState(110);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VariableModifierContext ------------------------------------------------------------------

StaticScriptParser::VariableModifierContext::VariableModifierContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* StaticScriptParser::VariableModifierContext::Let() {
  return getToken(StaticScriptParser::Let, 0);
}

tree::TerminalNode* StaticScriptParser::VariableModifierContext::Const() {
  return getToken(StaticScriptParser::Const, 0);
}


size_t StaticScriptParser::VariableModifierContext::getRuleIndex() const {
  return StaticScriptParser::RuleVariableModifier;
}


antlrcpp::Any StaticScriptParser::VariableModifierContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StaticScriptParserVisitor*>(visitor))
    return parserVisitor->visitVariableModifier(this);
  else
    return visitor->visitChildren(this);
}

StaticScriptParser::VariableModifierContext* StaticScriptParser::variableModifier() {
  VariableModifierContext *_localctx = _tracker.createInstance<VariableModifierContext>(_ctx, getState());
  enterRule(_localctx, 16, StaticScriptParser::RuleVariableModifier);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(111);
    _la = _input->LA(1);
    if (!(_la == StaticScriptParser::Let

    || _la == StaticScriptParser::Const)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VariableDeclaratorContext ------------------------------------------------------------------

StaticScriptParser::VariableDeclaratorContext::VariableDeclaratorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* StaticScriptParser::VariableDeclaratorContext::Identifier() {
  return getToken(StaticScriptParser::Identifier, 0);
}

StaticScriptParser::TypeAnnotationContext* StaticScriptParser::VariableDeclaratorContext::typeAnnotation() {
  return getRuleContext<StaticScriptParser::TypeAnnotationContext>(0);
}

StaticScriptParser::VariableInitializerContext* StaticScriptParser::VariableDeclaratorContext::variableInitializer() {
  return getRuleContext<StaticScriptParser::VariableInitializerContext>(0);
}


size_t StaticScriptParser::VariableDeclaratorContext::getRuleIndex() const {
  return StaticScriptParser::RuleVariableDeclarator;
}


antlrcpp::Any StaticScriptParser::VariableDeclaratorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StaticScriptParserVisitor*>(visitor))
    return parserVisitor->visitVariableDeclarator(this);
  else
    return visitor->visitChildren(this);
}

StaticScriptParser::VariableDeclaratorContext* StaticScriptParser::variableDeclarator() {
  VariableDeclaratorContext *_localctx = _tracker.createInstance<VariableDeclaratorContext>(_ctx, getState());
  enterRule(_localctx, 18, StaticScriptParser::RuleVariableDeclarator);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(113);
    match(StaticScriptParser::Identifier);
    setState(115);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == StaticScriptParser::Colon) {
      setState(114);
      typeAnnotation();
    }
    setState(118);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == StaticScriptParser::Assign) {
      setState(117);
      variableInitializer();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VariableInitializerContext ------------------------------------------------------------------

StaticScriptParser::VariableInitializerContext::VariableInitializerContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* StaticScriptParser::VariableInitializerContext::Assign() {
  return getToken(StaticScriptParser::Assign, 0);
}

StaticScriptParser::ExpressionContext* StaticScriptParser::VariableInitializerContext::expression() {
  return getRuleContext<StaticScriptParser::ExpressionContext>(0);
}


size_t StaticScriptParser::VariableInitializerContext::getRuleIndex() const {
  return StaticScriptParser::RuleVariableInitializer;
}


antlrcpp::Any StaticScriptParser::VariableInitializerContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StaticScriptParserVisitor*>(visitor))
    return parserVisitor->visitVariableInitializer(this);
  else
    return visitor->visitChildren(this);
}

StaticScriptParser::VariableInitializerContext* StaticScriptParser::variableInitializer() {
  VariableInitializerContext *_localctx = _tracker.createInstance<VariableInitializerContext>(_ctx, getState());
  enterRule(_localctx, 20, StaticScriptParser::RuleVariableInitializer);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(120);
    match(StaticScriptParser::Assign);
    setState(121);
    expression(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeAnnotationContext ------------------------------------------------------------------

StaticScriptParser::TypeAnnotationContext::TypeAnnotationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* StaticScriptParser::TypeAnnotationContext::Colon() {
  return getToken(StaticScriptParser::Colon, 0);
}

StaticScriptParser::TypeContext* StaticScriptParser::TypeAnnotationContext::type() {
  return getRuleContext<StaticScriptParser::TypeContext>(0);
}


size_t StaticScriptParser::TypeAnnotationContext::getRuleIndex() const {
  return StaticScriptParser::RuleTypeAnnotation;
}


antlrcpp::Any StaticScriptParser::TypeAnnotationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StaticScriptParserVisitor*>(visitor))
    return parserVisitor->visitTypeAnnotation(this);
  else
    return visitor->visitChildren(this);
}
